--- a/forgot-password.html
+++ b/forgot-password.html
@@ -189,7 +189,7 @@
     <!-- ======= Footer ======= -->
     <footer class="footer" role="contentinfo">
       <div class="container">
-        <div class="row">
+        <div class="row text-center text-md-start">
           <div class="col-md-4 mb-4 mb-md-0">
             <a href="index.html"
               ><img src="assets/img/logo.png" alt="" class="img-fluid mb-3"
@@ -207,21 +207,21 @@
           </div>
           <div class="col-md-7 ms-auto">
             <div class="row site-section pt-0">
-              <div class="col-md-4 mb-4 mb-md-0">
+              <div class="col-4 col-md-4 mb-4 mb-md-0">
                 <h3>Account</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">My Account</a></li>
                   <li><a href="#">Log Out</a></li>
                 </ul>
               </div>
-              <div class="col-md-4 mb-4 mb-md-0">
+              <div class="col-4 col-md-4 mb-4 mb-md-0">
                 <h3>Event</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">Create</a></li>
                   <li><a href="#">Created</a></li>
                 </ul>
               </div>
-              <div class="col-md-4 mb-4 mb-md-0">
+              <div class="col-4 col-md-4 mb-4 mb-md-0">
                 <h3>Contact Us</h3>
                 <ul class="list-unstyled">
                   <li><a href="#">WhatsApp</a></li>
