--- a/index.html
+++ b/index.html
@@ -1011,74 +1011,38 @@
                                 required
                               ></textarea>
                             </div>
-                            <div class="form-group row my-3">
-                              <div class="form-group col-sm-6 mb-3 mb-sm-0">
-                                <div class="input-group">
-                                  <span
-                                    class="input-group-text"
-                                    id="basic-addon1"
-                                    ><i class="bi bi-whatsapp"></i
-                                  ></span>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    placeholder="Whatsapp link"
-                                    aria-label="Username"
-                                    aria-describedby="basic-addon1"
-                                  />
-                                </div>
-                              </div>
-                              <div class="form-group col-sm-6">
-                                <div class="input-group">
-                                  <span
-                                    class="input-group-text"
-                                    id="basic-addon1"
-                                    ><i class="bi bi-facebook"></i
-                                  ></span>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    placeholder="Facebook link"
-                                    aria-label="Username"
-                                    aria-describedby="basic-addon1"
-                                  />
-                                </div>
+                            <div id="row">
+                              <div class="input-group mt-3">
+                                <select class="form-select">
+                                  <option value="1" selected>WhatsApp</option>
+                                  <option value="2">Telegram</option>
+                                  <option value="3">Facebook</option>
+                                  <option value="3">Instagram</option>
+                                </select>
+                                <input
+                                  type="text"
+                                  class="form-control m-input"
+                                  placeholder="Registration's link"
+                                  aria-label="Registration's link"
+                                  aria-describedby="DeleteRow"
+                                />
+                                <button
+                                  class="btn normal-btn btn-outline-danger"
+                                  type="button"
+                                  id="DeleteRow"
+                                >
+                                  <i class="bi bi-trash"></i> Delete
+                                </button>
                               </div>
                             </div>
-                            <div class="form-group row my-3">
-                              <div class="form-group col-sm-6 mb-3 mb-sm-0">
-                                <div class="input-group mb-3">
-                                  <span
-                                    class="input-group-text"
-                                    id="basic-addon1"
-                                    ><i class="bi bi-instagram"></i
-                                  ></span>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    placeholder="Instagram link"
-                                    aria-label="Username"
-                                    aria-describedby="basic-addon1"
-                                  />
-                                </div>
-                              </div>
-                              <div class="form-group col-sm-6">
-                                <div class="input-group mb-3">
-                                  <span
-                                    class="input-group-text"
-                                    id="basic-addon1"
-                                    ><i class="bi bi-telegram"></i
-                                  ></span>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    placeholder="Telegram link"
-                                    aria-label="Username"
-                                    aria-describedby="basic-addon1"
-                                  />
-                                </div>
-                              </div>
-                            </div>
+                            <div id="newinput"></div>
+                            <button
+                              type="button"
+                              class="btn normal-btn btn-dark my-3 rowAdder"
+                            >
+                              <span class="bi bi-plus"> </span>
+                              Add more links
+                            </button>
                             <a
                               href="login.html"
                               class="btn btn-primary btn-user btn-block w-100"
@@ -1401,66 +1365,38 @@
                         required
                       ></textarea>
                     </div>
-                    <div class="form-group row my-3">
-                      <div class="form-group col-sm-6 mb-3 mb-sm-0">
-                        <div class="input-group">
-                          <span class="input-group-text" id="basic-addon1"
-                            ><i class="bi bi-whatsapp"></i
-                          ></span>
-                          <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Whatsapp link"
-                            aria-label="Username"
-                            aria-describedby="basic-addon1"
-                          />
-                        </div>
-                      </div>
-                      <div class="form-group col-sm-6">
-                        <div class="input-group">
-                          <span class="input-group-text" id="basic-addon1"
-                            ><i class="bi bi-facebook"></i
-                          ></span>
-                          <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Facebook link"
-                            aria-label="Username"
-                            aria-describedby="basic-addon1"
-                          />
-                        </div>
+                    <div id="row2">
+                      <div class="input-group mt-3">
+                        <select class="form-select">
+                          <option value="1" selected>WhatsApp</option>
+                          <option value="2">Telegram</option>
+                          <option value="3">Facebook</option>
+                          <option value="3">Instagram</option>
+                        </select>
+                        <input
+                          type="text"
+                          class="form-control m-input"
+                          placeholder="Registration's link"
+                          aria-label="Registration's link"
+                          aria-describedby="DeleteRow"
+                        />
+                        <button
+                          class="btn normal-btn btn-outline-danger"
+                          type="button"
+                          id="DeleteRow"
+                        >
+                          <i class="bi bi-trash"></i> Delete
+                        </button>
                       </div>
                     </div>
-                    <div class="form-group row my-3">
-                      <div class="form-group col-sm-6 mb-3 mb-sm-0">
-                        <div class="input-group mb-3">
-                          <span class="input-group-text" id="basic-addon1"
-                            ><i class="bi bi-instagram"></i
-                          ></span>
-                          <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Instagram link"
-                            aria-label="Username"
-                            aria-describedby="basic-addon1"
-                          />
-                        </div>
-                      </div>
-                      <div class="form-group col-sm-6">
-                        <div class="input-group mb-3">
-                          <span class="input-group-text" id="basic-addon1"
-                            ><i class="bi bi-telegram"></i
-                          ></span>
-                          <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Telegram link"
-                            aria-label="Username"
-                            aria-describedby="basic-addon1"
-                          />
-                        </div>
-                      </div>
-                    </div>
+                    <div id="newinput2"></div>
+                    <button
+                      type="button"
+                      class="btn normal-btn btn-dark my-3 rowAdder2"
+                    >
+                      <span class="bi bi-plus"> </span>
+                      Add more links
+                    </button>
                     <a
                       href="login.html"
                       class="btn btn-primary btn-user btn-block w-100"
@@ -2262,25 +2198,5 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
-    <script>
-      // upload img
-      function readURL(input) {
-        if (input.files && input.files[0]) {
-          var reader = new FileReader();
-
-          reader.onload = function (e) {
-            $(".imageResult").attr("src", e.target.result);
-          };
-          reader.readAsDataURL(input.files[0]);
-        }
-      }
-
-      $(function () {
-        $(".upload").on("change", function () {
-          readURL(input);
-        });
-      });
-    </script>
   </body>
 </html>
